--- a/sass/layouts/_section-collection.scss
+++ b/sass/layouts/_section-collection.scss
@@ -37,6 +37,9 @@
 }
 .collection__link{
     color: var(--white);
+    background-color: transparent;
+    border:  none;
+    border-bottom: 1px solid var(--white);
 }
 .collection__container{
     display: flex;
