--- a/css/main.css
+++ b/css/main.css
@@ -627,6 +627,7 @@ button:focus {
 }
 
 .collection__link {
+  width: 160px;
   color: var(--white);
   background-color: transparent;
   border: none;
@@ -762,7 +763,7 @@ button:focus {
   position: absolute;
   transform: rotate(-10deg);
   bottom: 22px;
-  right: 10px;
+  right: 17px;
 }
 
 .image__popcorn-caramel {
