--- a/sass/layouts/_section-collection.scss
+++ b/sass/layouts/_section-collection.scss
@@ -36,10 +36,12 @@
     }
 }
 .collection__link{
+    width: 160px;
     color: var(--white);
     background-color: transparent;
     border:  none;
     border-bottom: 1px solid var(--white);
+  
 }
 .collection__container{
     display: flex;
@@ -153,7 +155,7 @@
     position: absolute;
     transform: rotate(-10deg);
     bottom: 22px;
-    right: 10px;
+    right: 17px;
 }
 .image__popcorn-caramel{
     display: none;
