--- a/sass/layouts/_hero-section.scss
+++ b/sass/layouts/_hero-section.scss
@@ -20,7 +20,6 @@
         width: 744px;
         padding: 156px 48px 0 48px;
         flex-direction: column;
-        // padding: 156px 0;
     }
     @include desktop{
         width: 1440px;
@@ -91,6 +90,11 @@
     margin-bottom: 24px;
     font-size: 16px;
     @include tablet{
+        width: 410px;
+        font-size: 18px;
+    }
+    @include desktop{
+        width: 410px;
         font-size: 18px;
     }
 }
