--- a/sass/layouts/_section-statistic.scss
+++ b/sass/layouts/_section-statistic.scss
@@ -2,6 +2,7 @@
     text-align:start;
     margin-bottom: 32px;
     @include desktop{
+        width: 800px;
         margin-bottom: 40px;
     }
 }
