update pictures for 1360px

--- a/css/main.css
+++ b/css/main.css
@@ -2493,12 +2493,12 @@ button:focus {
 }
 @media screen and (min-width: 744px) and (max-width: 1359px) {
   .footer__information-list {
-    width: 314px;
+    width: 290px;
   }
 }
 @media screen and (min-width: 1360px) {
   .footer__information-list {
-    width: 314px;
+    width: 290px;
   }
 }
 
@@ -2734,8 +2734,19 @@ button:focus {
 
 .contacts__list {
   display: flex;
+  width: 250px;
   align-items: center;
   margin-bottom: 16px;
+}
+@media screen and (min-width: 744px) and (max-width: 1359px) {
+  .contacts__list {
+    width: 270px;
+  }
+}
+@media screen and (min-width: 1360px) {
+  .contacts__list {
+    width: 290px;
+  }
 }
 
 .contacts__list:last-child {
