--- a/css/main.css
+++ b/css/main.css
@@ -631,6 +631,12 @@ button:focus {
   border-bottom: 1px solid var(--white);
 }
 
+.collection__link:hover,
+.collection__link:focus {
+  color: var(--black);
+  border-bottom: 1px solid var(--black);
+}
+
 .collection__container {
   display: flex;
   flex-direction: column;
@@ -2808,25 +2814,20 @@ button:focus {
   .modal {
     top: 50%;
     left: 50%;
-    transform: translate(-53%, -22%);
+    transform: translate(-50%, -22%);
   }
 }
 @media screen and (min-width: 1360px) {
   .modal {
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -48%);
+    transform: translate(-50%, -45%);
   }
 }
 
 .modal__container {
   position: relative;
   width: 630px;
-}
-@media screen and (min-width: 744px) and (max-width: 1359px) {
-  .modal__container {
-    width: 600px;
-  }
 }
 
 .button__close {
@@ -2843,7 +2844,7 @@ button:focus {
 @media screen and (min-width: 744px) and (max-width: 1359px) {
   .button__close {
     top: 15px;
-    right: -25px;
+    right: 0;
   }
 }
 @media screen and (min-width: 1360px) {
