--- a/sass/layouts/_modal.scss
+++ b/sass/layouts/_modal.scss
@@ -29,20 +29,20 @@
     @include tablet{
         top: 50%;
         left: 50%;
-        transform: translate(-53%,-22%) ;
+        transform: translate(-50%,-22%) ;
     }
     @include desktop{
         top: 50%;
         left: 50%;
-        transform: translate(-50%,-48%) ;
+        transform: translate(-50%,-45%) ;
     }
 }
 .modal__container{
     position: relative;
     width: 630px;
-    @include tablet{
-        width: 600px;
-    }
+    // @include tablet{
+    //     width: 630px;
+    // }
     // @include desktop{
     //     width: 630px;
     // }
@@ -59,7 +59,7 @@
     background-color: var(--white);
     @include tablet{
         top: 15px;
-        right: -25px; 
+        right: 0; 
     }
     @include desktop {
         top: 20px;
