--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 h1,
 h2,
 h3,
@@ -215,6 +216,19 @@ button:focus {
 
 .not-active {
   display: none;
+}
+
+.link__white:hover,
+.link__white:focus {
+  background-color: var(--white);
+  color: var(--black);
+  border-radius: 24px;
+}
+
+.link__white:hover .footer__icon,
+.link__white:focus .footer__icon {
+  fill: var(--black); /* Зміна кольору */
+  color: var(--black);
 }
 
 :root {
@@ -2441,6 +2455,7 @@ button:focus {
 }
 @media screen and (min-width: 1360px) {
   .item__container {
+    display: flex;
     margin-left: 236px;
   }
 }
@@ -2449,7 +2464,7 @@ button:focus {
   display: flex;
   align-items: center;
   width: 197px;
-  padding: 16px;
+  padding: 8px;
 }
 
 .footer__item__container {
@@ -2459,6 +2474,7 @@ button:focus {
 @media screen and (min-width: 744px) and (max-width: 1359px) {
   .footer__item__container {
     flex-direction: row;
+    gap: 20px;
     margin-bottom: 64px;
   }
 }
@@ -2471,6 +2487,8 @@ button:focus {
 .footer__link {
   display: flex;
   width: 100%;
+  padding: 8px;
+  align-items: center;
 }
 
 .footer__icon {
@@ -2506,18 +2524,18 @@ button:focus {
 
 .footer__information-list {
   display: flex;
-  width: 260px;
+  width: 290px;
   align-items: center;
   margin-bottom: 16px;
 }
 @media screen and (min-width: 744px) and (max-width: 1359px) {
   .footer__information-list {
-    width: 290px;
+    width: 310px;
   }
 }
 @media screen and (min-width: 1360px) {
   .footer__information-list {
-    width: 290px;
+    width: 310px;
   }
 }
 
