--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -6,9 +6,6 @@ h1{
     display: none;
 }
 
-// *, *::before, *::after {
-//     box-sizing: border-box;
-// }
 html, body {
     overflow-x: hidden; 
 }
@@ -161,4 +158,15 @@ button:focus{
 }
 .not-active{
     display: none;
+}
+.link__white:hover,
+.link__white:focus{
+   background-color: var(--white);
+   color: var(--black);
+   border-radius: 24px;
+}
+.link__white:hover .footer__icon,
+.link__white:focus .footer__icon {
+    fill: var(--black); /* Зміна кольору */
+    color: var(--black);
 }
