--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -42,6 +42,7 @@
     margin-left: 45px;
     }
     @include desktop{
+        display: flex;
         margin-left: 236px;
     }
     
@@ -51,7 +52,7 @@
     align-items: center;
     // width: 165px;
     width: 197px;
-    padding: 16px;
+    padding: 8px;
 
 }
 .footer__item__container{
@@ -59,6 +60,7 @@
     flex-direction: column;
     @include tablet{
         flex-direction: row;
+        gap: 20px;
         margin-bottom: 64px;
     }
     @include desktop{
@@ -68,6 +70,9 @@
 .footer__link{
     display: flex;
     width: 100%;
+    padding: 8px;
+    align-items: center;
+    // justify-content: center;
 }
 .footer__icon{
     margin-right: 16px;
@@ -76,7 +81,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    border-bottom: 1px solid var(--black-hover);;
+    border-bottom: 1px solid var(--black-hover);
 @include desktop{
     flex-direction: row;
 }
@@ -94,14 +99,14 @@
 .footer__information-list{
     display: flex;
     // width: 100%;
-    width: 260px;
+    width: 290px;
     align-items: center;
     margin-bottom: 16px;
     @include tablet{
-        width: 290px;
+        width: 310px;
     }
     @include desktop{
-        width: 290px;
+        width: 310px;
     }
 }
 .footer__information-list:last-child{
