--- a/css/main.css
+++ b/css/main.css
@@ -2825,6 +2825,19 @@ button:focus {
   }
 }
 
+.contacts__link-white:hover,
+.contacts__link-white:focus {
+  color: var(--black);
+}
+
+.contacts__link-black:hover,
+.contacts__link-black:focus {
+  color: var(--white);
+  background-color: var(--black);
+  padding: 0 8px;
+  border-radius: 24px;
+}
+
 .backdrop {
   position: fixed;
   z-index: 10;
