--- a/sass/layouts/_contacts.scss
+++ b/sass/layouts/_contacts.scss
@@ -83,3 +83,15 @@
         right: 24px;
     }
 }
+.contacts__link-white:hover,
+.contacts__link-white:focus{
+   color: var(--black);
+}
+
+.contacts__link-black:hover,
+.contacts__link-black:focus{
+    color: var(--white);
+    background-color: var(--black);
+    padding:0 8px;
+    border-radius: 24px;
+}
