--- a/sass/layouts/_section-statistic.scss
+++ b/sass/layouts/_section-statistic.scss
@@ -119,5 +119,20 @@
 }
 
 .statistic__link{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 180px;
+    padding: 8px;
     color: var(--black);
+    background-color: transparent;
+    border:  none;
+    border-bottom: 1px solid var(--black); 
+}
+.statistic__link:hover,
+.statistic__link:focus{
+    color: var(--white);
+    border-bottom: 1px solid var(--white);
+    background-color: var(--black);
+    border-radius: 24px;
 }
