--- a/sass/layouts/_product-section-list.scss
+++ b/sass/layouts/_product-section-list.scss
@@ -184,7 +184,7 @@
     font-size: 14px;
     @include tablet{
         font-size: 14px;
-        justify-content: start;
+        justify-content: flex-start;
     }
     @include desktop{
         font-size: 16px;
