--- a/sass/layouts/_about-hero-section.scss
+++ b/sass/layouts/_about-hero-section.scss
@@ -35,7 +35,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: start;
+    align-items: flex-start;
     @include desktop{
     flex-direction: row;
     align-items: center;
@@ -47,11 +47,11 @@
     width: 100%;
     @include tablet{
         width: 380px;
-        align-items: start;
+        align-items: flex-start;
     }
     @include desktop{
         width: 380px;
-        align-items: start;
+        align-items: flex-start;
     }
 }
 
