--- a/sass/layouts/_about-production-section.scss
+++ b/sass/layouts/_about-production-section.scss
@@ -1,7 +1,7 @@
 .about__production-container{
     position: relative;
     display: flex;
-    align-items: start;
+    align-items: flex-start;
     justify-content: space-between;
     flex-direction: column;
     @include desktop{
@@ -49,7 +49,7 @@
 .about__production__text-container{
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     // justify-content: space-between;
     width: 100%;
     // padding: 16px 0;
