--- a/sass/layouts/_about-sticks-section.scss
+++ b/sass/layouts/_about-sticks-section.scss
@@ -2,7 +2,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     justify-content: space-between;
     @include desktop{
         flex-direction: row;
