--- a/sass/layouts/_hero-section.scss
+++ b/sass/layouts/_hero-section.scss
@@ -127,61 +127,49 @@
     background: var(--black);
     color: var(--white);
 }
-// .hero__link:hover svg,
-// .hero__link:focus svg{
-//     fill: var(--white);
-//     color: var(--black);
-// }
 
 .hero__image-container{
     position: relative;
     margin-bottom: 54px;
-    @include desktop{
-        // margin-right: 188px;
-    }
-
 }
 
 .hero__image-orange{
     position: absolute;
-    top: 0;
-    left: 0;
+    width: 300px;
+    height: 300px;
+    top: 200px;
+    left: 50px;
     background: radial-gradient(circle at center,  rgb(247, 211, 133) 0%, rgb(243, 149, 64) 92%);
     filter: blur(250px);
 
 }
 
 .hero__image-violet{
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    top: 200px;
+    left: 50px;
     background: radial-gradient(circle at center,  rgb(221, 221, 219) 0%, rgb(106, 80, 138) 92%);
     filter: blur(250px);
 }
 
 .hero__image-navy{
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    top: 200px;
+    left: 50px;
     background: radial-gradient(circle at center, rgb(118, 214, 249) 0%, rgb(58, 74, 87) 92%);
     filter: blur(250px);
 }
 .hero__image-green{
     position: absolute;
-    // z-index: 100000;
     width: 300px;
     height: 300px;
-    top: 0;
-    left: 0;
+    top: 200px;
+    left: 50px;
     background: radial-gradient(circle at center, rgb(118, 214, 249) 0%, rgb(21, 167, 160) 92%);
     filter: blur(250px);
 }
-// .hero__image{
-//     position: absolute;
-//     // top: 0;
-//     // left: 0;
-//     width: 214px;
-//     height: 307px;
-//     @include tablet{
-//         width: 389px;
-//         height: 558px;
-//     }
-//     @include desktop{
-//         width: 413px;
-//         height: 593px;
-//     }
-// }
+
