--- a/sass/layouts/_menu-modal.scss
+++ b/sass/layouts/_menu-modal.scss
@@ -5,8 +5,8 @@
     transform: translate(-50%,-50%);
     display: flex;
     flex-direction: column;
-    align-items: start;
-    justify-content: start;
+    align-items: flex-start;
+    justify-content: flex-start;
     width: 309px;
     padding: 16px 16px;
     border-radius: 16px;
@@ -22,7 +22,7 @@
 .menu__link{
     display: flex;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     padding: 16px;
     height: 24px;
     color: var(--black);
