--- a/sass/layouts/_partners-hero-section.scss
+++ b/sass/layouts/_partners-hero-section.scss
@@ -32,7 +32,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    align-items: start;
+    align-items: flex-start;
     @include desktop{
         flex-direction: row;
         justify-content: space-between;
@@ -52,7 +52,7 @@
     // height: 66px;
     padding: 32px 32px 32px 16px;
     border-bottom: 1px solid var(--grey-more-light);
-    align-items: start;
+    align-items: flex-start;
     @include desktop{
         padding: 40px 24px;
         align-items: center;
