--- a/sass/layouts/_section-statistic.scss
+++ b/sass/layouts/_section-statistic.scss
@@ -20,8 +20,8 @@
         width: 314px;
     }
     @include desktop{
-        width: 343px;
-        height: 300px;
+        width: 305px;
+        // height: 300px;
 
 }
 
