deleting margin-bottom about section

--- a/sass/layouts/_about-statistic-section.scss
+++ b/sass/layouts/_about-statistic-section.scss
@@ -1,7 +1,7 @@
 .about__statistic-block{
     @include desktop{
         margin-left: 650px;
-        margin-bottom: 80px;
+        // margin-bottom: 80px;
     }
 }
 .statistic__image{
