--- a/sass/layouts/_section-statistic.scss
+++ b/sass/layouts/_section-statistic.scss
@@ -114,9 +114,9 @@
     } 
 }
 
-.statistic__text{
-    margin-bottom: 24px;
-}
+// .statistic__text{
+//     // margin-bottom: 24px;
+// }
 
 .statistic__link{
     display: flex;
