--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,24 @@ body {
 }
 
 h1 {
-  display: none;
+  font-size: 1px;
+  color: transparent;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  position: absolute;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 }
 
 html, body {
