--- a/sass/layouts/_about-hero-section.scss
+++ b/sass/layouts/_about-hero-section.scss
@@ -1,6 +1,17 @@
-.about__title__hidden{
-    display: none;
-}
+// .about__title__hidden{
+//     display: none;
+// }
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+  }
 .about__hero-title{
     font-family: "Tektur", sans-serif;
     font-weight: 700;
