created error page

--- a/css/main.css
+++ b/css/main.css
@@ -38,18 +38,6 @@ h1 {
   position: absolute;
 }
 
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border: 0;
-}
-
 html, body {
   overflow-x: hidden;
 }
@@ -1315,8 +1303,16 @@ button:focus {
   }
 }
 
-.about__title__hidden {
-  display: none;
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 }
 
 .about__hero-title {
@@ -3019,4 +3015,50 @@ button:focus {
   height: 24px;
   border: none;
   background-color: var(--white);
+}
+
+.error__section {
+  position: relative;
+  background: linear-gradient(137deg, #de4f12 12.37%, #f7d385 100%);
+}
+
+.error__title {
+  padding: 10px;
+  margin-bottom: 24px;
+  font-family: "Fixel Display", sans-serif;
+  font-weight: 600;
+  font-size: 160px;
+  line-height: 87%;
+  letter-spacing: 0.02em;
+  text-align: center;
+  background: linear-gradient(180deg, #fafafa 0%, rgba(250, 250, 250, 0.2) 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.error__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 32px;
+  padding: 4px 8px 4px 24px;
+  width: 100%;
+  background: var(--white);
+  height: 48px;
+}
+
+.error__text {
+  font-family: var(--font-main);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 140%;
+  color: var(--black);
+  padding-right: 12px;
+}
+
+.error__img {
+  position: absolute;
+  top: 55px;
+  left: 165px;
 }/*# sourceMappingURL=main.css.map */
