--- a/css/main.css
+++ b/css/main.css
@@ -3019,6 +3019,10 @@ button:focus {
 
 .error__section {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   background: linear-gradient(137deg, #de4f12 12.37%, #f7d385 100%);
 }
 
@@ -3035,6 +3039,22 @@ button:focus {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: 2px rgba(250, 250, 250, 0.2);
+}
+@media screen and (min-width: 744px) and (max-width: 1359px) {
+  .error__title {
+    font-size: 300px;
+    line-height: 93%;
+    -webkit-text-stroke: 4px rgba(250, 250, 250, 0.2);
+  }
+}
+@media screen and (min-width: 1360px) {
+  .error__title {
+    padding: 60px;
+    font-size: 408px;
+    line-height: 68%;
+    -webkit-text-stroke: 6px rgba(250, 250, 250, 0.2);
+  }
 }
 
 .error__link {
@@ -3046,6 +3066,16 @@ button:focus {
   width: 100%;
   background: var(--white);
   height: 48px;
+}
+@media screen and (min-width: 744px) and (max-width: 1359px) {
+  .error__link {
+    width: 187px;
+  }
+}
+@media screen and (min-width: 1360px) {
+  .error__link {
+    width: 187px;
+  }
 }
 
 .error__text {
@@ -3059,6 +3089,20 @@ button:focus {
 
 .error__img {
   position: absolute;
-  top: 55px;
+  top: 70px;
   left: 165px;
+  -webkit-clip-path: polygon(0% 78%, 2% 84%, 6% 88%, 9% 91%, 13% 94%, 18% 96%, 23% 97%, 28% 99%, 32% 100%, 37% 100%, 43% 100%, 49% 100%, 54% 99%, 59% 99%, 65% 99%, 70% 99%, 77% 98%, 79% 93%, 84% 91%, 88% 87%, 93% 82%, 95% 78%, 98% 74%, 99% 71%, 100% 16%, 31% 0%, 24% 0%, 20% 0%, 14% 1%);
+          clip-path: polygon(0% 78%, 2% 84%, 6% 88%, 9% 91%, 13% 94%, 18% 96%, 23% 97%, 28% 99%, 32% 100%, 37% 100%, 43% 100%, 49% 100%, 54% 99%, 59% 99%, 65% 99%, 70% 99%, 77% 98%, 79% 93%, 84% 91%, 88% 87%, 93% 82%, 95% 78%, 98% 74%, 99% 71%, 100% 16%, 31% 0%, 24% 0%, 20% 0%, 14% 1%);
+}
+@media screen and (min-width: 744px) and (max-width: 1359px) {
+  .error__img {
+    top: 120px;
+    left: 330px;
+  }
+}
+@media screen and (min-width: 1360px) {
+  .error__img {
+    top: 50px;
+    left: 623px;
+  }
 }/*# sourceMappingURL=main.css.map */
