--- a/sass/layouts/_error.scss
+++ b/sass/layouts/_error.scss
@@ -1,5 +1,9 @@
 .error__section{
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     background: linear-gradient(137deg, #de4f12 12.37%, #f7d385 100%);
 
 }
@@ -14,11 +18,22 @@
     line-height: 87%;  
     letter-spacing: 0.02em; 
     text-align: center;
-    // background: url('https://res.cloudinary.com/ddtdtthqh/image/upload/v1746541688/apero/error/error_1x_mobile-min_fgtuc8.png');
     background: linear-gradient(180deg, #fafafa 0%, rgba(250, 250, 250, 0.2) 100%);
     background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
+   -webkit-text-stroke: 2px rgba(250, 250, 250, 0.2);
+   @include tablet{
+    font-size: 300px;
+    line-height: 93%;
+    -webkit-text-stroke: 4px rgba(250, 250, 250, 0.2);
+   }
+   @include desktop{
+    padding: 60px;
+    font-size: 408px;
+    line-height: 68%;
+    -webkit-text-stroke: 6px rgba(250, 250, 250, 0.2);
+   }
 }
 
 .error__link{
@@ -30,7 +45,12 @@
     width: 100%;
     background: var(--white);
     height: 48px;
-    
+    @include tablet{
+        width: 187px;
+    }
+    @include desktop{
+        width: 187px;
+    }  
 }
 .error__text{
     font-family: var(--font-main);
@@ -39,10 +59,26 @@
     line-height: 140%;
     color: var(--black);
     padding-right: 12px;
+    // @include desktop{
+    //     font-weight: 400;
+    // }
+
 }
 .error__img{
     position: absolute;
-    top: 55px;
+    top: 70px;
     left: 165px;
-  
+    // clip-path: polygon(1% 50%, 1% 58%, 1% 66%, 1% 72%, 1% 79%, 0% 87%, 3% 93%, 4% 97%, 12% 99%, 23% 99%, 31% 99%, 38% 98%, 45% 96%, 47% 91%, 50% 83%, 52% 79%, 65% 76%, 99% 16%, 4% 0%);
+    // clip-path: polygon(0% 43%, 2% 50%, 1% 56%, 3% 62%, 5% 68%, 7% 75%, 10% 82%, 15% 88%, 21% 93%, 28% 96%, 35% 96%, 44% 95%, 48% 90%, 51% 84%, 54% 77%, 57% 70%, 63% 69%, 70% 69%, 73% 63%, 75% 55%, 77% 44%, 81% 2%, 2% 0%);
+    // clip-path: polygon(5% 34%5% 34%, 5% 39%, 5% 39%, 4% 47%, 4% 47%, 5% 52%, 5% 52%, 5% 59%, 5% 59%, 5% 66%, 5% 66%, 5% 73%, 5% 76%, 8% 83%, 8% 83%, 11% 88%, 11% 88%, 14% 92%, 14% 92%, 19% 98%, 19% 98%, 25% 99%, 25% 99%, 33% 99%, 33% 99%, 41% 99%, 41% 99%, 44% 96%, 44% 96%, 46% 90%, 46% 90%, 49% 84%, 49% 84%, 53% 76%, 53% 76%, 54% 72%, 54% 72%, 56% 66%, 56% 66%, 62% 67%, 62% 67%, 66% 67%, 66% 67%, 69% 58%, 69% 53%, 70% 45%, 70% 45%, 69% 37%, 69% 31%, 70% 14%, 70% 14%, 19% 1%, 19% 0%);
+    // clip-path: polygon(4% 38%, 3% 45%, 3% 52%, 4% 59%, 4% 65%, 5% 69%, 8% 75%, 12% 81%, 15% 87%, 19% 92%, 23% 95%, 30% 97%, 34% 97%, 39% 97%, 42% 95%, 45% 92%, 47% 87%, 49% 82%, 51% 77%, 52% 72%, 57% 71%, 61% 71%, 65% 66%, 65% 61%, 66% 55%, 68% 48%, 67% 42%, 69% 37%, 69% 31%, 18% 0%);
+    clip-path: polygon(0% 78%, 2% 84%, 6% 88%, 9% 91%, 13% 94%, 18% 96%, 23% 97%, 28% 99%, 32% 100%, 37% 100%, 43% 100%, 49% 100%, 54% 99%, 59% 99%, 65% 99%, 70% 99%, 77% 98%, 79% 93%, 84% 91%, 88% 87%, 93% 82%, 95% 78%, 98% 74%, 99% 71%, 100% 16%, 31% 0%, 24% 0%, 20% 0%, 14% 1%);
+    @include tablet{
+        top: 120px;
+        left: 330px;
+    }
+    @include desktop{
+        top: 50px;
+        left: 623px;
+    }
 }
