--- a/css/main.css
+++ b/css/main.css
@@ -429,6 +429,7 @@ button:focus {
   display: flex;
   min-width: 0;
   margin: 0 auto;
+  height: 800px;
 }
 
 .hero__container {
@@ -1082,19 +1083,19 @@ button:focus {
 
 .partners__container {
   width: 375px;
-  padding: 48px 0;
+  padding: 48px 16px;
   margin: 0 auto;
 }
 @media screen and (min-width: 744px) and (max-width: 1359px) {
   .partners__container {
     width: 744px;
-    padding: 48px 0;
+    padding: 48px 48px;
   }
 }
 @media screen and (min-width: 1360px) {
   .partners__container {
-    width: 1440px;
-    padding: 80px 0;
+    width: 1360px;
+    padding: 80px 40px;
   }
 }
 
@@ -1102,22 +1103,6 @@ button:focus {
   max-width: 100%;
   display: flex;
   overflow: hidden;
-}
-
-.partners__blocks-first {
-  display: flex;
-  flex-direction: row;
-  width: 1600%;
-  gap: 16px;
-  margin-bottom: 16px;
-  animation: marquee__images-left 20s linear infinite alternate;
-}
-@media screen and (min-width: 744px) and (max-width: 1359px) {
-  .partners__blocks-first {
-    gap: 20px;
-    margin-bottom: 20px;
-    animation: marquee__images-left 20s linear infinite alternate;
-  }
 }
 
 .partners__block {
@@ -1145,17 +1130,46 @@ button:focus {
   }
 }
 
+.partners__blocks-first {
+  display: flex;
+  flex-direction: row;
+  width: 1600%;
+  gap: 16px;
+  margin-bottom: 16px;
+  animation: marquee__images-left 30s linear infinite alternate;
+}
+@media screen and (min-width: 744px) and (max-width: 1359px) {
+  .partners__blocks-first {
+    gap: 20px;
+    margin-bottom: 20px;
+    animation: marquee__images-left 30s linear infinite alternate;
+  }
+}
+@media screen and (min-width: 1360px) {
+  .partners__blocks-first {
+    gap: 20px;
+    margin-bottom: 20px;
+    animation: marquee__images-left 30s linear infinite alternate;
+  }
+}
+
 .partners__blocks-second {
   display: flex;
   flex-direction: row;
   width: 1600%;
   gap: 16px;
-  animation: marquee__images-left 20s linear infinite alternate;
+  animation: marquee__images-left 30s linear infinite alternate;
 }
 @media screen and (min-width: 744px) and (max-width: 1359px) {
   .partners__blocks-second {
     gap: 20px;
-    animation: marquee__images-left 20s linear infinite alternate;
+    animation: marquee__images-left 30s linear infinite alternate;
+  }
+}
+@media screen and (min-width: 1360px) {
+  .partners__blocks-second {
+    gap: 20px;
+    animation: marquee__images-left 30s linear infinite alternate;
   }
 }
 
@@ -1164,15 +1178,7 @@ button:focus {
     transform: translateX(0%);
   }
   100% {
-    transform: translateX(-225%);
-  }
-}
-@keyframes marquee__images-right {
-  0% {
-    transform: translateX(-225%);
-  }
-  100% {
-    transform: translateX(0%);
+    transform: translateX(-100%);
   }
 }
 .question__form {
