--- a/sass/layouts/_section-partners.scss
+++ b/sass/layouts/_section-partners.scss
@@ -1,35 +1,21 @@
 .partners__container{
     width: 375px;
-    padding: 48px 0;
+    padding: 48px 16px;
     margin: 0 auto;
-
 
     @include tablet{
         width: 744px;
-        padding: 48px 0;
+        padding: 48px 48px;
     }
     @include desktop{
-        width: 1440px;
-        padding: 80px 0;
+        width: 1360px;
+        padding: 80px 40px;
     }
 }
 .marquee__images{
     max-width: 100%;
     display: flex;
     overflow: hidden;
-}
-.partners__blocks-first{
-    display: flex;
-    flex-direction: row;
-    width: 1600%;
-    gap: 16px;
-    margin-bottom: 16px;
-    animation: marquee__images-left 20s linear infinite  alternate;
-    @include tablet{
-        gap: 20px;
-        margin-bottom: 20px;
-        animation: marquee__images-left 20s linear infinite  alternate;
-    }
 }
 .partners__block{
     display: flex;
@@ -51,15 +37,37 @@
         height: 104px;
     }
 }
+.partners__blocks-first{
+    display: flex;
+    flex-direction: row;
+    width: 1600%;
+    gap: 16px;
+    margin-bottom: 16px;
+    animation: marquee__images-left 30s linear infinite  alternate;
+    @include tablet{
+        gap: 20px;
+        margin-bottom: 20px;
+        animation: marquee__images-left 30s linear infinite  alternate;
+    }
+    @include desktop{
+        gap: 20px;
+        margin-bottom: 20px;
+        animation: marquee__images-left 30s linear infinite  alternate;
+    }
+}
 .partners__blocks-second{
     display: flex;
     flex-direction: row;
     width: 1600%;
     gap: 16px;
-    animation: marquee__images-left 20s linear infinite  alternate;
+    animation: marquee__images-left 30s linear infinite  alternate;
     @include tablet{
         gap: 20px;
-        animation: marquee__images-left 20s linear infinite  alternate;
+        animation: marquee__images-left 30s linear infinite  alternate;
+    }
+    @include desktop{
+        gap: 20px;
+        animation: marquee__images-left 30s linear infinite  alternate;
     }
 
 }
@@ -69,15 +77,8 @@
         transform: translateX(0%);
     }
     100% {
-        transform: translateX(-225%);
+        transform: translateX(-100%);
     }
 }
 
-@keyframes marquee__images-right {
-    0% {
-        transform: translateX(-225%);
-    }
-    100% {
-        transform: translateX(0%);
-    }
-}
+
