--- a/css/main.css
+++ b/css/main.css
@@ -2346,8 +2346,26 @@ button:focus {
 
 .image__new__label {
   position: absolute;
-  right: 20px;
-  bottom: 130px;
+  width: 30px;
+  height: 30px;
+  right: 10px;
+  bottom: 165px;
+}
+@media screen and (min-width: 744px) and (max-width: 1359px) {
+  .image__new__label {
+    width: 35px;
+    height: 35px;
+    right: 40px;
+    bottom: 130px;
+  }
+}
+@media screen and (min-width: 1360px) {
+  .image__new__label {
+    width: 40px;
+    height: 40px;
+    right: 20px;
+    bottom: 130px;
+  }
 }
 
 .product__list-subtitle {
